--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -11,9 +11,9 @@
       <ion-label>Tab 2</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="contactos" href="/tabs/contactos">
+      <ion-icon aria-hidden="true" name="people"></ion-icon>
+      <ion-label>contactos</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
