--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -15,6 +15,11 @@
       <ion-icon aria-hidden="true" name="people"></ion-icon>
       <ion-label>contactos</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button tab="tab3" (click)="cerrarSesion()">
+      <ion-icon aria-hidden="true" name="log-out-outline"></ion-icon>
+      <ion-label>Salir</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
